--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,9 @@
     "axios": "^1.4.0",
     "clsx": "^1.2.1",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.9.0",
     "react-redux": "^8.1.0",
     "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
